Fix tag alignment on Home Page

--- a/src/components/PostTag.css
+++ b/src/components/PostTag.css
@@ -1,8 +1,7 @@
 .tag {
     font-size: small;
     border-radius: 15px;
-    margin: 0 auto 1rem auto;
-    /*margin-bottom: 1rem;*/
+    margin-bottom: 1rem;
     max-height: 15px;
     cursor: pointer;
     padding: 1px 5px;
@@ -12,5 +11,4 @@
     width: auto;
     height: auto;
     margin-top: 0;
-    /*margin: auto;*/
 }
