--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -38,7 +38,5 @@
 #tag-list {
     display: flex;
     flex-direction: column;
-    /*justify-content: flex-start;*/
-    align-content: flex-start;
-    /*left: 0;*/
+    align-items: flex-start;
 }
